Fix for bug 194559 - Entered Japanese text doesn't go back to preedit text by Ctrl+BS Patch by Masayuki Nakano r=ere sr=roc